asm/asm.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = [],
        peg$c1 = function() {
            return {
              start: start,
              code: objectCode,
              ltable: labelTable,
              unfills: unfills,
              unresolved: unresolvedAddr
            };
          },
        peg$c2 = peg$FAILED,
        peg$c3 = ":",
        peg$c4 = { type: "literal", value: ":", description: "\":\"" },
        peg$c5 = function(label) {
            debug('define label: ' + label);
            labelTable[label] = objectCode.length;
          },
        peg$c6 = ".data",
        peg$c7 = { type: "literal", value: ".data", description: "\".data\"" },
        peg$c8 = function(value) {
            while(value--) {
              objectCode.push(NIL);
            }
          },
        peg$c9 = "LDA",
        peg$c10 = { type: "literal", value: "LDA", description: "\"LDA\"" },
        peg$c11 = function(operand) {
            var val = operand.value || operand;
            if (val > 255) {
              debug("the operand of 'LDA' is illegal");
              // TODO:reject
            }
            if (operand.type === 'address') {
              objectCode.push(LDA2);
              objectCode.push(operand.value >> 8);
              objectCode.push(operand.value & 255);
              debug('LDA [' + operand.value + ']');
            } else {
              objectCode.push(LDA);
              objectCode.push(operand & 255);
              debug('LDA ' + operand);
            }
          },
        peg$c12 = "LDB",
        peg$c13 = { type: "literal", value: "LDB", description: "\"LDB\"" },
        peg$c14 = function(operand) {
            if (operand > 255) {
              debug("the operand of 'LDB' is illegal");
              // TODO:reject
            } 
            objectCode.push(LDB);
            objectCode.push(operand & 255);
            debug('LDB ' + operand);
          },
        peg$c15 = "LDX",
        peg$c16 = { type: "literal", value: "LDX", description: "\"LDX\"" },
        peg$c17 = function(operand) {
            var val = operand.value || operand;
            if (val > 65535) {
              debug("the operand of 'LDX' is illegal");
              // TODO:reject
            }
            if (operand.type === 'address') {
              objectCode.push(LDX2);
              objectCode.push(operand.value >> 8);
              objectCode.push(operand.value & 255);
              debug('LDX [' + operand.value + ']');
            } else {
              objectCode.push(LDX);
              objectCode.push(operand >> 8);
              objectCode.push(operand & 255);
              debug('LDX ' + operand);
            }
          },
        peg$c18 = "LDY",
        peg$c19 = { type: "literal", value: "LDY", description: "\"LDY\"" },
        peg$c20 = function(operand) {
            var val = operand.value || operand;
            if (val > 65535) {
              debug("the operand of 'LDY' is illegal");
              // TODO:reject
            }
            if (operand.type === 'address') {
              objectCode.push(LDY2);
              objectCode.push(operand.value >> 8);
              objectCode.push(operand.value & 255);
              debug('LDY [' + operand.value + ']');
            } else {
              objectCode.push(LDY);
              objectCode.push(operand >> 8);
              objectCode.push(operand & 255);
              debug('LDY ' + operand);
            }
          },
        peg$c21 = "STA",
        peg$c22 = { type: "literal", value: "STA", description: "\"STA\"" },
        peg$c23 = ",",
        peg$c24 = { type: "literal", value: ",", description: "\",\"" },
        peg$c25 = "X",
        peg$c26 = { type: "literal", value: "X", description: "\"X\"" },
        peg$c27 = function() {
            objectCode.push(STA_X);
            debug('STA,X');
          },
        peg$c28 = "STB",
        peg$c29 = { type: "literal", value: "STB", description: "\"STB\"" },
        peg$c30 = function() {
            objectCode.push(STB_X);
            debug('STB,X');
          },
        peg$c31 = "STY",
        peg$c32 = { type: "literal", value: "STY", description: "\"STY\"" },
        peg$c33 = function() {
            objectCode.push(STY_X);
            debug('STY,X');
          },
        peg$c34 = "END",
        peg$c35 = { type: "literal", value: "END", description: "\"END\"" },
        peg$c36 = function(label) {
            if (labelTable[label] === undefined) {
              start = label;
            } else {
              start = labelTable[label];
            }
            objectCode.push(END);
            debug('END ' + label);
          },
        peg$c37 = "CMPA",
        peg$c38 = { type: "literal", value: "CMPA", description: "\"CMPA\"" },
        peg$c39 = function(operand) {
            if (operand > 255) {
              debug("the operand of 'CMPA' is illegal");
              // TODO:reject
            } 
            objectCode.push(CMPA);
            objectCode.push(operand & 255);
            debug('CMPA ' + operand);
          },
        peg$c40 = "CMPB",
        peg$c41 = { type: "literal", value: "CMPB", description: "\"CMPB\"" },
        peg$c42 = function(operand) {
            if (operand > 255) {
              debug("the operand of 'CMPB' is illegal");
              // TODO:reject
            } 
            objectCode.push(CMPB);
            objectCode.push(operand & 255);
            debug('CMPB ' + operand);
          },
        peg$c43 = "CMPX",
        peg$c44 = { type: "literal", value: "CMPX", description: "\"CMPX\"" },
        peg$c45 = function(operand) {
            if (operand > 65535) {
              debug("the operand of 'CMPX' is illegal");
              // TODO:reject
            } 
            objectCode.push(CMPX);
            objectCode.push(operand >> 8);
            objectCode.push(operand & 255);
            debug('CMPX ' + operand);
          },
        peg$c46 = "CMPY",
        peg$c47 = { type: "literal", value: "CMPY", description: "\"CMPY\"" },
        peg$c48 = function(operand) {
            if (operand > 65535) {
              debug("the operand of 'CMPY' is illegal");
              // TODO:reject
            } 
            objectCode.push(CMPY);
            objectCode.push(operand >> 8);
            objectCode.push(operand & 255);
            debug('CMPY ' + operand);
          },
        peg$c49 = "CMPD",
        peg$c50 = { type: "literal", value: "CMPD", description: "\"CMPD\"" },
        peg$c51 = function(operand) {
            if (operand > 65535) {
              debug("the operand of 'CMPD' is illegal");
              // TODO:reject
            } 
            objectCode.push(CMPD);
            objectCode.push(operand >> 8);
            objectCode.push(operand & 255);
            debug('CMPD ' + operand);
          },
        peg$c52 = "JMP",
        peg$c53 = { type: "literal", value: "JMP", description: "\"JMP\"" },
        peg$c54 = function(label) {
            objectCode.push(JMP);
            pushLabel(label);
            debug('JMP ' + label.value);
          },
        peg$c55 = "JEQ",
        peg$c56 = { type: "literal", value: "JEQ", description: "\"JEQ\"" },
        peg$c57 = function(label) {
            objectCode.push(JEQ);
            pushLabel(label);
            debug('JEQ ' + label.value);
          },
        peg$c58 = "JNE",
        peg$c59 = { type: "literal", value: "JNE", description: "\"JNE\"" },
        peg$c60 = function(label) {
            objectCode.push(JNE);
            pushLabel(label);
            debug('JNE ' + label.value);
          },
        peg$c61 = "JGT",
        peg$c62 = { type: "literal", value: "JGT", description: "\"JGT\"" },
        peg$c63 = function(label) {
            objectCode.push(JGT);
            pushLabel(label);
            debug('JGT ' + label.value);
          },
        peg$c64 = "JLT",
        peg$c65 = { type: "literal", value: "JLT", description: "\"JLT\"" },
        peg$c66 = function(label) {
            objectCode.push(JLT);
            pushLabel(label);
            debug('JLT ' + label.value);
          },
        peg$c67 = "INCA",
        peg$c68 = { type: "literal", value: "INCA", description: "\"INCA\"" },
        peg$c69 = function() {
            objectCode.push(INCA);
            debug('INCA');
         },
        peg$c70 = "INCB",
        peg$c71 = { type: "literal", value: "INCB", description: "\"INCB\"" },
        peg$c72 = function() {
            objectCode.push(INCB);
            debug('INCB');
         },
        peg$c73 = "INCX",
        peg$c74 = { type: "literal", value: "INCX", description: "\"INCX\"" },
        peg$c75 = function() {
            objectCode.push(INCX);
            debug('INCX');
         },
        peg$c76 = "INCY",
        peg$c77 = { type: "literal", value: "INCY", description: "\"INCY\"" },
        peg$c78 = function() {
            objectCode.push(INCY);
            debug('INCY');
         },
        peg$c79 = "INCD",
        peg$c80 = { type: "literal", value: "INCD", description: "\"INCD\"" },
        peg$c81 = function() {
            objectCode.push(INCD);
            debug('INCD');
         },
        peg$c82 = "DECA",
        peg$c83 = { type: "literal", value: "DECA", description: "\"DECA\"" },
        peg$c84 = function() {
            objectCode.push(DECA);
            debug('DECA');
         },
        peg$c85 = "DECB",
        peg$c86 = { type: "literal", value: "DECB", description: "\"DECB\"" },
        peg$c87 = function() {
            objectCode.push(DECB);
            debug('DECB');
         },
        peg$c88 = "DECX",
        peg$c89 = { type: "literal", value: "DECX", description: "\"DECX\"" },
        peg$c90 = function() {
            objectCode.push(DECX);
            debug('DECX');
         },
        peg$c91 = "DECY",
        peg$c92 = { type: "literal", value: "DECY", description: "\"DECY\"" },
        peg$c93 = function() {
            objectCode.push(DECY);
            debug('DECY');
         },
        peg$c94 = "DECD",
        peg$c95 = { type: "literal", value: "DECD", description: "\"DECD\"" },
        peg$c96 = function() {
            objectCode.push(DECD);
            debug('DECD');
         },
        peg$c97 = "ROLA",
        peg$c98 = { type: "literal", value: "ROLA", description: "\"ROLA\"" },
        peg$c99 = function() {
            objectCode.push(ROLA);
            debug('ROLA');
          },
        peg$c100 = "ROLB",
        peg$c101 = { type: "literal", value: "ROLB", description: "\"ROLB\"" },
        peg$c102 = function() {
            objectCode.push(ROLB);
            debug('ROLB');
          },
        peg$c103 = "RORA",
        peg$c104 = { type: "literal", value: "RORA", description: "\"RORA\"" },
        peg$c105 = function() {
            objectCode.push(RORA);
            debug('RORA');
          },
        peg$c106 = "RORB",
        peg$c107 = { type: "literal", value: "RORB", description: "\"RORB\"" },
        peg$c108 = function() {
            objectCode.push(RORB);
            debug('RORB');
          },
        peg$c109 = "ADCA",
        peg$c110 = { type: "literal", value: "ADCA", description: "\"ADCA\"" },
        peg$c111 = function() {
            objectCode.push(ADCA);
            debug('ADCA');
          },
        peg$c112 = "ADCB",
        peg$c113 = { type: "literal", value: "ADCB", description: "\"ADCB\"" },
        peg$c114 = function() {
            objectCode.push(ADCB);
            debug('ADCB');
          },
        peg$c115 = "ADDA",
        peg$c116 = { type: "literal", value: "ADDA", description: "\"ADDA\"" },
        peg$c117 = function(operand) {
            if (operand > 255) {
              debug("the operand of 'ADDA' is illegal");
              // TODO:reject
            } 
            objectCode.push(ADDA);
            objectCode.push(operand & 255);
            debug('ADDA' + operand);
          },
        peg$c118 = "ADDB",
        peg$c119 = { type: "literal", value: "ADDB", description: "\"ADDB\"" },
        peg$c120 = function(operand) {
            if (operand > 255) {
              debug("the operand of 'ADDB' is illegal");
              // TODO:reject
            } 
            objectCode.push(ADDB);
            objectCode.push(operand & 255);
            debug('ADDB' + operand);
          },
        peg$c121 = "ADDAB",
        peg$c122 = { type: "literal", value: "ADDAB", description: "\"ADDAB\"" },
        peg$c123 = function() {
            objectCode.push(ADDAB);
            debug('ADDAB');
          },
        peg$c124 = "INT",
        peg$c125 = { type: "literal", value: "INT", description: "\"INT\"" },
        peg$c126 = function(operand) {
            if (operand > 255) {
              debug("the operand of 'INT' is illegal");
              // TODO:reject
            } 
            objectCode.push(INT);
            objectCode.push(operand & 255);
            debug('INT ' + operand);
          },
        peg$c127 = "#",
        peg$c128 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c129 = function(label) {
            return {
              value: label,
              line: line(),
              column: column()
            }
          },
        peg$c130 = /^[a-zA-z]/,
        peg$c131 = { type: "class", value: "[a-zA-z]", description: "[a-zA-z]" },
        peg$c132 = /^[a-zA-Z0-9]/,
        peg$c133 = { type: "class", value: "[a-zA-Z0-9]", description: "[a-zA-Z0-9]" },
        peg$c134 = function(char, latter) {
            return char + latter.join('');
          },
        peg$c135 = "[",
        peg$c136 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c137 = "]",
        peg$c138 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c139 = function(value) {
            return {
              type: 'address',
              value: value
            }
          },
        peg$c140 = function(value) {
            unresolvedAddr.push(objectCode.length+1);
            return value;
          },
        peg$c141 = "#$",
        peg$c142 = { type: "literal", value: "#$", description: "\"#$\"" },
        peg$c143 = /^[0-9a-fA-F]/,
        peg$c144 = { type: "class", value: "[0-9a-fA-F]", description: "[0-9a-fA-F]" },
        peg$c145 = function(value) {
            value = '0x' + value.join('');
            return parseInt(value);
          },
        peg$c146 = /^[0-9]/,
        peg$c147 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c148 = function(value) {
            return parseInt(value.join( ''));
          },
        peg$c149 = ";",
        peg$c150 = { type: "literal", value: ";", description: "\";\"" },
        peg$c151 = /^[^\r\n]/,
        peg$c152 = { type: "class", value: "[^\\r\\n]", description: "[^\\r\\n]" },
        peg$c153 = function() {
            debug('comment');
          },
        peg$c154 = /^[\r\n]/,
        peg$c155 = { type: "class", value: "[\\r\\n]", description: "[\\r\\n]" },
        peg$c156 = /^[ \t]/,
        peg$c157 = { type: "class", value: "[ \\t]", description: "[ \\t]" },
        peg$c158 = void 0,
        peg$c159 = { type: "any", description: "any character" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseline();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseline();
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c1();
      }
      s0 = s1;

      return s0;
    }

    function peg$parseline() {
      var s0;

      s0 = peg$parsenonsense();
      if (s0 === peg$FAILED) {
        s0 = peg$parselabelDef();
        if (s0 === peg$FAILED) {
          s0 = peg$parseinstruction();
        }
      }

      return s0;
    }

    function peg$parselabelDef() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseword();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsews();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsews();
        }
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 58) {
            s3 = peg$c3;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c4); }
          }
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parsews();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parsews();
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseterminal();
              if (s5 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c5(s1);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c2;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c2;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c2;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c2;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c2;
      }

      return s0;
    }

    function peg$parseinstruction() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsews();
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parsews();
        }
      } else {
        s1 = peg$c2;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsemnemonic();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parsews();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parsews();
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseterminal();
            if (s4 !== peg$FAILED) {
              s1 = [s1, s2, s3, s4];
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c2;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c2;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c2;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c2;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 5) === peg$c6) {
          s1 = peg$c6;
          peg$currPos += 5;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c7); }
        }
        if (s1 !== peg$FAILED) {
          s2 = [];
          s3 = peg$parsews();
          if (s3 !== peg$FAILED) {
            while (s3 !== peg$FAILED) {
              s2.push(s3);
              s3 = peg$parsews();
            }
          } else {
            s2 = peg$c2;
          }
          if (s2 !== peg$FAILED) {
            s3 = peg$parseimmediate();
            if (s3 !== peg$FAILED) {
              s4 = [];
              s5 = peg$parsews();
              while (s5 !== peg$FAILED) {
                s4.push(s5);
                s5 = peg$parsews();
              }
              if (s4 !== peg$FAILED) {
                s5 = peg$parseterminal();
                if (s5 !== peg$FAILED) {
                  peg$reportedPos = s0;
                  s1 = peg$c8(s3);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$c2;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c2;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c2;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c2;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c2;
        }
      }

      return s0;
    }

    function peg$parsemnemonic() {
      var s0;
